--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     height: 100%;
     min-height: 100%;
     position: relative;
-    padding-bottom: 120px;
 }
 
 p {
@@ -191,6 +190,7 @@ span.spacer {
 /*------------------------------------*\
   ABOUT
 \*------------------------------------*/
+
 .about-container {
     position: absolute;
     top: 15vh;
@@ -204,6 +204,13 @@ span.spacer {
     margin: auto;
     padding-bottom: 30px;
     background: rgba(34, 34, 34, 0.85);
+}
+
+@media (max-width: 480px) {
+  .about-container {
+    top: 10vh;
+    width: 100%;
+  }
 }
 
 .avatar {
@@ -314,18 +321,17 @@ textarea {
     max-width: 680px;
     min-width: 350px;
     height: auto;
-    min-height: 40vh;
     margin: auto;
     padding-bottom: 30px;
     background: rgba(34, 34, 34, 0.85);
 }
 
-.category1 {
+.category {
     position: relative;
     right: 16px;
     display: block;
     width: 100%;
-    height: 200px;
+    height: auto;
     margin: 20px auto 10px;
     border-radius: 2%;
 }
