--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 
 html,
 body {
-    height: 100%;
     min-height: 100%;
     position: relative;
 }
@@ -48,11 +47,12 @@ a:hover {
     text-decoration: underline;
 }
 
-#header {
+.header {
+    position: fixed;
+    top: 0;
+    display: block;
     height: auto;
     width: 100%;
-    z-index: 0;
-    position: fixed;
     z-index: 999;
 }
 
@@ -72,8 +72,9 @@ a:hover {
   float: right;
 }
 .wrapper {
-    min-height: 100%;
-    margin-bottom: -120px;
+    min-height: 100vh;
+    /*height: 100%;*/
+    /*margin-bottom: -120px;*/
     /* header gradient: */
     background: url(images/bg-img.jpg);
     /* Image is centered vertically and horizontally at all times */
@@ -102,8 +103,8 @@ a:hover {
 .footer,
 .wrapper:after {
     height: 120px;
-    position: absolute;
-    left: 0; right: 0; bottom: 0;
+    /*position: absolute;
+    left: 0; right: 0; bottom: 0;*/
 }
 
 .footer {
@@ -191,26 +192,24 @@ span.spacer {
   ABOUT
 \*------------------------------------*/
 
+.about-wrapper {
+  display: block;
+  padding-top: 100px;
+}
+
 .about-container {
-    position: absolute;
+   /* position: absolute;
     top: 15vh;
     right: 0;
-    left: 0;
+    left: 0;*/
     display: block;
     width: 70vw;
     max-width: 680px;
     height: auto;
-    min-height: 40vh;
+    /*min-height: 40vh;*/
     margin: auto;
-    padding-bottom: 30px;
+    padding: 30px 0;
     background: rgba(34, 34, 34, 0.85);
-}
-
-@media (max-width: 480px) {
-  .about-container {
-    top: 10vh;
-    width: 100%;
-  }
 }
 
 .avatar {
